fix phone button on mobile

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -21,6 +21,8 @@ footer {
   @media (max-width: 550px) {
      width: 70px;
     height: 70px;
+    right: 30px;             
+  bottom: 30px;
   }
     }
   
